fix: trailing slash in api token path, swag doc update
